gramatica.txt
L(ou l): é o conjunto L do automato
N(ou n): é o conjunto N do automato
v(ou V): é o conjunto V do automato

α = {_, a,...,z,A,...,Z}
γ = {TODO O ALFABETO da linguagem} 
κ = {0,...,9}

P = {
	      S -> CMD,
	    CMD -> AtribBnCMD | SpaceCMD | CondCMD | TabCMD | WriteCMD | BnCMD | DeclCMD | ε
	   Decl -> local Var Bn | Var Bn | local Var = Exp Bn | Var = Exp Bn | Var = Read Bn,
	  Atrib -> Declna = Exp | Declna, Atrib, Exp | Declna = Read,
 	   Cond -> if Exp { Bn CMD } Bn | if Exp { Bn CMD } Bn else { Bn CMD } Bn,
	 Declna -> locar Var | Var,
	Boolean ->  true | false,
	   Read -> io.read(),
	  Write -> io.write(Wexp) Bn,
	   Wexp -> Wexp1,Wexp1 | Wexp1,
	  Wexp1 -> String | Var,
	    Exp -> Uop Exp | Exp1 Bop Exp1 | (Exp) | Exp2,
	   Exp1 -> Uop Exp | (Exp) | Exp2,
	   Exp2 -> Num | Var | Boolean | nil,
	    Uop -> - | !,
	    Bop -> ** | * | / | + | - | > | >= | < | <= | == | & | |,
	     Bn -> \n
	    Var -> αVar2,
	   Var2 -> αVar2, Num2Var2,
	    Num -> .kNum| .Num2 | k,
	   Num2 -> κnum2 | κ,
	 String -> "STR",
	    STR -> γSTR | ε 
}
